--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,11 @@
   font-weight: 400;
 }
 
-body {
+
+html, body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-#root {
+  padding: 0;
+  height: 100%;
   width: 100%;
-  height: 100vh;
+  box-sizing: border-box;
 }
-
